# sphinx-tfdoc

./: README.md  pyproject.toml
src/sphinx_tfdoc/: extension.py  store.py  terraform.py
src/sphinx_tfdoc/templates/: base.rst  data_resource.rst  index.rst  managed_resource.rst  module.rst  module_call.rst  output.rst  required_provider.rst  variable.rst
