[tool.poetry]
name = "sphinx-tfdoc"
version = "0.1.0"
description = "Sphinx API documentation for Terraform Modules"
authors = ["Tommy Wang <twang@august8.net>"]
homepage = "https://github.com/twang817/sphinx-tfdoc"
repository = "https://github.com/twang817/sphinx-tfdoc"

[tool.poetry.dependencies]
python = ">=3.9"
Jinja2 = "*"
sphinx = "*"
tabulate = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
